--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "hueniversity",
-  "version": "0.0.2",
-  "description": "Community learning experiment",
-  "main": "lib/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hueniverse/hueniversity.git"
-  },
-  "keywords": [
-    "hapi",
-    "learn",
-    "community"
-  ],
-  "license": "BSD",
-  "bugs": {
-    "url": "https://github.com/hueniverse/hueniversity/issues"
-  },
-  "homepage": "https://github.com/hueniverse/hueniversity",
-  "dependencies": {
-    "hapi": "8.x.x",
-    "hoek": "2.x.x"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node lib/index.js"
-  }
+    "name": "hueniversity",
+    "version": "0.0.2",
+    "description": "Community learning experiment",
+    "main": "lib/index.js",
+    "repository": {
+	"type": "git",
+	"url": "https://github.com/hueniverse/hueniversity.git"
+    },
+    "keywords": [
+	"hapi",
+	"learn",
+	"community"
+    ],
+    "license": "BSD",
+    "bugs": {
+	"url": "https://github.com/hueniverse/hueniversity/issues"
+    },
+    "homepage": "https://github.com/hueniverse/hueniversity",
+    "dependencies": {
+	"hapi": "8.x.x",
+	"hoek": "2.x.x"
+    },
+    "scripts": {
+	"test": "make test-cov",
+	"start": "node lib/start.js"
+    },
+    "devDependencies": {
+	"lab": "^5.5.1",
+	"code": "^1.4.0"
+    }
 }
